Save&Next button breaks on small screen fix

--- a/src/css/formulae.scss
+++ b/src/css/formulae.scss
@@ -179,7 +179,7 @@ $color-suffix: 00;
     height: 40px;
     font-size: 12px;
     font-weight: 600;
-    padding: 0 16px;
+    padding: 0 8px;
     border-radius: 4px;
     text-decoration: none;
     outline: none;
